@@ -159,5 +159,7 @@ struct SPVM_env {
   void (*leave_scope)(SPVM_ENV* env, int32_t original_mortal_stack_top);
   void* (*type_name_raw)(SPVM_ENV* env, void* object);
   void* (*type_name)(SPVM_ENV* env, void* object);
+  int32_t (*object_basic_type_id)(SPVM_ENV* env, void* object);
+  int32_t (*object_type_dimension)(SPVM_ENV* env, void* object);
 };
 #endif
