@@ -3,6 +3,8 @@ package SPVM::CORE {
   use SPVM::Complex_2d;
   use SPVM::List;
   use SPVM::Hash;
+  
+  # native sub new_oarray_proto : oarray ($proto_array : oarray, $length : int);
 
   precompile sub sliceb : byte[] ($nums : byte[], $offset : int, $length : int) {
     
