@@ -28,6 +28,8 @@
   - add slicel core function
   - add slicef core function
   - add sliced core function
+  - add env->object_basic_type_id
+  - add env->object_type_dimension
 0.0410 2018-01-16
   - Fix realese of 0.0409
 0.0409 2018-01-16
